# stripe-rs

./: Cargo.toml
examples/: create_charge.rs  create_customer.rs  create_customer_with_card.rs  list_customers.rs
src/: client.rs  error.rs  lib.rs  params.rs  request.rs
src/resources/: account.rs  card.rs  charge.rs  customer.rs  deleted.rs  event.rs  invoices.rs  mod.rs  plan.rs  source.rs  subscription.rs
tests/: encoding.rs  example.rs  integration_test.rs  sync.rs
