[package]
name = "stripe-rust" # b.c. stripe and stripe-rs were already taken
version = "0.4.5"
description = "API bindings for the Stripe v1 HTTP API"
authors = ["Kevin Stenerson <kevin@rapiditynetworks.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rapiditynetworks/stripe-rs"
documentation = "https://docs.rs/stripe-rust"
keywords = ["stripe", "v1", "api"]
categories = ["api-bindings"]

[badges]
travis-ci = {repository = "rapiditynetworks/stripe-rs"}

[lib]
name = "stripe"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.5"
sha2 = "0.7"
hmac = "0.5"
